# main

glxDisplay/: CMakeLists.txt  README.md
glxDisplay/App/: App.cpp  App.h  Quad.cpp  Quad.h  glxDisplay.cpp  glxDisplay.h  loadImage.cpp  loadImage.h  main.cpp
glxDisplay/common/: Quad.cpp  glxDisplay.cpp  loadImageOnTexture.cpp  loadImageOnTexture.h  openGLText2D.cpp  openGLText2D.h  shader.cpp  shader.h  stb_image.h
glxDisplay/common/Gstreamer/: gstreamer.cpp  gstreamer.h
glxDisplay/common/glfwDisplay/: glxDisplay.cpp
glxDisplay/common/openGL/: Quad.cpp  Quad.h  loadImageOnTexture.cpp  openGLText2D.cpp  openGLText2D.h  shader.cpp
glxDisplay/data/shader/: quad.fragmentshader  quad.vertexshader  text2d.fragmentshader  text2d.vertexshader
glxDisplay/src/: main.cpp
